--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -115,7 +115,7 @@
     \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for quarterly instead of biannual forecasting cycles
     \item Managing Git repository backups for processes and rules and compiling quarterly reports for change tracking and change management for the internal audit and restoring if necessary
     \item Programmatically creating and manipulating cubes, dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments
-    \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while developing automated calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
+    \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while automating calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
 \end{itemize}
 \vspace{0.5mm}
 
@@ -179,7 +179,7 @@
 \header{Education} \\
 \vspace{0.5mm}
 \textbf{Texas Tech University, Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{Master of Science in Agricultural and Applied Economics} \hfill  \textit{May 2022} \\
+\textit{Master of Science in Agricultural and Applied Economics, GPA: 3.61} \hfill  \textit{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
