--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -112,7 +112,7 @@
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Present} \\
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, PAfE, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for quarterly instead of biannual forecasting cycles
+    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for quarterly instead of biannual forecasting cycles
     \item Managing Git repository backups for processes and rules and compiling quarterly reports for change tracking and change management for the internal audit and restoring if necessary
     \item Programmatically creating and manipulating cubes, dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments
     \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while automating calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
