--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -59,7 +59,7 @@
 
 \newcommand{\header} [1] {
     \vspace{0.5mm}
-    {\textsc{\textbf{\large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}} % center and underline
+    {\textsc{\textbf{\Large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}} % center and underline
 }
 
 \newcommand{\employer} [3] {
