--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -101,7 +101,7 @@
 % \vspace*{0.5mm}
 \begin{center}
     {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{0.5mm}
-    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} \ding{118} (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{donlim93.github.io} \ding{118} \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\
+    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} \ding{118} (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{https://donlim93.github.io} \ding{118} \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
@@ -113,9 +113,9 @@
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
     \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for quarterly instead of biannual forecasting cycles
-    \item Managing Git repository backups for processes and rules and compiling quarterly reports for change tracking and change management for the internal audit and restoring if necessary
-    \item Programmatically creating and manipulating cubes, dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments
-    \item Extracting, transforming, and loading (ETL) job scrub, GL, and budget data from ODBC SQL connections while automating calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
+    \item Managing and restoring Git repository backups for processes and rules, including compiling quarterly reports on change tracking and change management for ITGC audit controls
+    \item Programmatically creating and manipulating 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments
+    \item Extracting, transforming, and loading (ETL) job scrub, P/L, SGM, GL, KPIs, statistical entries, and budget data while automating calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
 \end{itemize}
 \vspace{0.5mm}
 
@@ -123,7 +123,7 @@
 \textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Nov 2024} \\
 \begin{itemize}
     \item Implemented and tested Salesforce development, UAT, and production environments, including training for 200+ end users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
-    \item Created Salesforce reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing
+    \item Created Salesforce standardized and ad hoc reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing leadership
     \item System admin for ERP and business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, Docusign)
 \end{itemize}
 \vspace{0.5mm}
@@ -131,10 +131,10 @@
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} \\
 \begin{itemize}
-    \item Troubleshooted, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes
+    \item Troubleshot, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and active directory
-    \item Administered internal IT support (workstation setups, hardware and software troubleshooting)
+    \item Administered internal IT support (workstation setups; printer, laptop, and peripherals troubleshooting)
 \end{itemize}    
 \vspace{0.5mm}
 
@@ -179,7 +179,7 @@
 \header{Education} \\
 \vspace{0.5mm}
 \textbf{Texas Tech University, Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{Master of Science in Agricultural and Applied Economics, GPA: 3.6} \hfill  \textit{May 2022} \\
+\textit{Master of Science in Agricultural and Applied Economics, GPA: 3.6/4} \hfill  \textit{May 2022} \\
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
