--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -17,9 +17,18 @@
     urlcolor=blue
 }
 
-\usepackage[a4paper,top=0.75in, right=0.75in, left=0.75in, bottom=0.75in,nofoot]{geometry}
-\textheight=10in
-\pagestyle{empty}
+\usepackage{geometry}
+\geometry{
+a4paper,
+top=0.75in,
+bottom=0.75in,
+left=0.75in,
+right=0.75in
+}
+
+\pdfgentounicode=1 % make ATS friendly
+
+\textheight=11in
 \raggedright
 
 % First bullet point
@@ -100,8 +109,8 @@
 %==== Profile ====%
 % \vspace*{0.5mm}
 \begin{center}
-    {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{0.5mm}
-    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} \ding{118} (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{https://donlim93.github.io} \ding{118} \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\
+    {\Huge\textbf\textsc{{{Don Lim}}}}\\ \vspace{1.5mm}
+    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} \ding{118} (806) 317-7937 \ding{118} \href{https://donlim93.github.io/}{https://donlim93.github.io} \ding{118} \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\ \vspace{0.5mm}
 \end{center}
 %==== Experience ====%
 \vspace*{-2mm}
@@ -112,13 +121,12 @@
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Present} \\
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for quarterly instead of biannual forecasting cycles
-    \item Managing and restoring Git repository backups for processes and rules, including compiling quarterly reports on change tracking and change management for ITGC audit controls
+    \item Developing IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, incorporating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git); enhancing processes to allow for daily instead of biannual forecasting cycles
+    \item Managing and restoring Git repository backups for processes and rules, including compiling quarterly reports on change tracking and change management for SOX/ITGC audit controls
     \item Programmatically creating and manipulating 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views in IBM TM1/Planning Analytics development, UAT, and production environments
     \item Extracting, transforming, and loading (ETL) job scrub, P/L, SGM, GL, KPIs, statistical entries, and budget data while automating calculations for actual and forecasted cash flows, KPIs, and milestones for financial models and reporting 
 \end{itemize}
 \vspace{0.5mm}
-
 
 \textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Nov 2024} \\
 \begin{itemize}
