--- a/cv/LimDon_resumeCV.tex
+++ b/cv/LimDon_resumeCV.tex
@@ -195,7 +195,7 @@ right=0.7in
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
-        \item R (dplyr, tidyr, stringr, ggplot2), Stata, Matlab, Python, SAS, \LaTeX
+        \item R (tidyverse), Stata, Matlab, Python, SAS, \LaTeX
         \item OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
     \end{itemize}
 \end{itemize}
